fixed UI layout for visibility checkbox list

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -121,7 +121,7 @@ footer ul {
 }
 
 footer ul li {
-    width: 49%;
+    width: 32%;
     margin: 0;
     padding: 1em 0;
     text-align: center;
